Make the project build ready

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -186,7 +186,7 @@ a {
   .techicons {
       display: flex;
       align-items: center;
-      justify-content: end;
+    justify-content: flex-end;
   }
 
   .techicons.right {
