--- a/src/styles/tech.css
+++ b/src/styles/tech.css
@@ -63,7 +63,7 @@
 .techicons {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .techicons.right {
@@ -71,7 +71,7 @@
 }
 
 .techicons.left {
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .techsvg {
@@ -85,5 +85,5 @@
 }
 
 .techsvg.left {
-    justify-content: end;
+    justify-content: flex-end;
 }
