--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -2,6 +2,9 @@
   padding-top: 9%;
   text-align: center;
   color: white;
+  @media (max-width: 620px) {
+    visibility: hidden;
+  }
 }
 .nav {
   display: flex;
